# FE

./: .clang-format  CMakeLists.txt  README.md
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui
stylesheets/: styles.css
